# nlp-tunetalk

./: .gitignore  data-cleaned-structure.md  documentation.md  music_mapper.py  project-context.md  project-pipeline.md  pyproject.toml
app/: config.py  main.py
app/models/: mood_mapping.py
app/services/: chat_service.py  emotion_service.py  playlist_service.py  response_service.py
app/utils/: preprocessing.py
nlp preprocessing/: data-cleaning–goemotion-spotify.ipynb  dataprep.ipynb  dataset_trimmer.ipynb  emotion-detection-model-fine-tuning (1).ipynb  emphatic-response-data-preparaion.ipynb  goemotions_trimmer.ipynb  mood-to-music-mapping-logic.ipynb  retrieval-based-response-system (1).ipynb
nlp preprocessing/dataset/: goemotions.csv  spotify_lyrics.csv
nlp preprocessing/dataset-cleaning/: cleaned_empathetic_dialogues.csv  cleaned_goemotions.csv  test-case.json
nlp preprocessing/dataset-cleaning/emotion-detection/: cleaned_empdial.csv  cleaned_goemotions.csv  cleaned_isear.csv  combined_all.csv  test.csv  train.csv  val.csv
nlp preprocessing/dataset-cleaning/emphatetic-response/: response_bank_clean.json  training_pairs_clean.csv
nlp preprocessing/dataset-raw/: empathetic_dialogues.csv
nlp preprocessing/scripts/: import_trending_spotify_dataset.py
nlp-music-backend/: installation.md  justfile  project-context.md  test.py
nlp-music-backend/app/: models.py  services.py
