[project]
name = "tunetalk-model"
version = "0.1.0"
description = "TuneTalk music recommendation model backend"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "transformers>=4.40",
    "torch>=2.0",
    "sentence-transformers>=3.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "python-dotenv>=1.0",
    "scikit-learn>=1.3",
    "huggingface-hub>=0.20",
    "flasgger>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
